--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "fastclick": "^1.0.6",
     "swiper": "^5.3.7",
     "vue": "^2.5.2",
