--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^1.15.2",
     "fastclick": "^1.0.6",
     "swiper": "^5.3.7",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^4.1.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
